fix skills wrap in Pc

--- a/src/stylesheets/layouts/Footer.scss
+++ b/src/stylesheets/layouts/Footer.scss
@@ -1,16 +1,21 @@
 .copyright {
     font-family: 'Asap';
+    font-size: 1rem;
     background-color: black;
     color:white;
     margin-bottom: 0px;
-    height: 10vh;
+    height: 5vh;
     display:flex;
     justify-content: center;
     align-items: center;
     @include forTablet{
         justify-content: flex-end;
-        align-items: flex-end;
+        align-items: center;
         padding-right: 20px;
+        font-size: 1.3rem;
+    }
+    p{
+        margin-bottom: 0px;
     }
     
 }
