--- a/src/stylesheets/layouts/Main.scss
+++ b/src/stylesheets/layouts/Main.scss
@@ -12,7 +12,7 @@ html {
     background-size: cover;
     background-attachment: fixed;
     width: 100vw;
-    height: 90vh;
+    height: 95vh;
     // @include forTablet { 
     // width: 100vw;
     // height: 100vh;
